--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -1,30 +1,30 @@
 <div class="bg-customAzulito mb-2">
-<section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-  <div class="container mx-auto flex flex-col md:flex-row items-center
+    <div class="container mx-auto flex flex-col md:flex-row items-center
    px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
 
-    <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
-      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+      <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
+        <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+      </div>
+
+      <!-- Dynamic Text Content (passed from parent) -->
+      <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
+        <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
+          Información de libro
+        </h1>
+      </div>
     </div>
-
-    <!-- Dynamic Text Content (passed from parent) -->
-    <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
-      <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
-        Información de libro
-      </h1>
-    </div>
-  </div>
-</section>
+  </section>
 
 
 
-<div class="max-w-4xl mx-auto bg-white rounded-lg shadow-sm overflow-hidden flex flex-col md:flex-row mt-4 md:mt-8 lg:mt-12 mb-4 md:mb-8 lg:mb-12 gap-x-8">
+  <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-sm overflow-hidden flex flex-col md:flex-row mt-4 md:mt-8 lg:mt-12 mb-4 md:mb-8 lg:mb-12 gap-x-8">
     <!-- Imagen del libro -->
- <div class="md:w-1/2 flex items-center justify-center my-10 mx-8">
-   <img [src]="libro?.imagen" [alt]="libro?.titulo" class="w-full h-auto object-contain my-auto">
- </div>
+    <div class="md:w-1/2 flex items-center justify-center my-10 mx-8">
+      <img [src]="libro?.imagen" [alt]="libro?.titulo" class="w-full h-auto object-contain my-auto">
+    </div>
 
     <!-- Contenido del libro -->
     <div class="p-6 md:w-2/3">
@@ -54,6 +54,7 @@
         </div>
 
         <span class="text-gray-700 text-lg font-medium ml-3">
+<!--    ({{ media_calificacion !== null && !isNaN(media_calificacion) ? media_calificacion?.toFixed(1) : '0' }}/5)-->
   </span>
       </div>
 
