--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -1,9 +1,12 @@
-<div class="cart-icon-container" (click)="toggleCart()">
-  <svg class="icon-cart" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
-    <path d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"/>
-  </svg>
-  <span class="cantidad">0</span>
-</div>
+<!--<div class="cart-icon-container" (click)="toggleCart()">-->
+<!--  <svg class="icon-cart" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">-->
+<!--    <path d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"/>-->
+<!--  </svg>-->
+<!--  <span class="cantidad">{{ cartQuantity }}</span>-->
+<!--</div>-->
+
+
+
 <section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <div class="container mx-auto flex flex-col md:flex-row items-centerpx-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
@@ -42,16 +45,40 @@
       ✖
     </button>
   </div>
+
 </section>
 
+<!--<div class="flex items-center space-x-2 mx-60 my-10 px-20">-->
+<!--  <label for="sort" class="-->
+<!--   mb-2  font-bold text-[20px] text-[#1D2C4B] font-montserrat  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
+<!--  >Ordenar por</label>-->
+<!--  <p>You select your team {{ opcionSeleccionada }} using change event</p>-->
+<!--  <select id="sort" class="border border-gray-300  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
+<!--          #filtro (change)="onSelected(filtro.value)">-->
+<!--    <option default>Pick a team</option>-->
+<!--    <option  value="autor">Autor</option>-->
+<!--    <option value="titulo">Libro</option>-->
+<!--    <option value="fecha">Fecha edición</option>-->
+<!--    <option value="precio">Precio</option>-->
+<!--  </select>-->
+
+<!--</div>-->
+
+
+
+
+
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
+  <!-- Filtro Catalogo -->
   <div class="flex-shrink-0">
+    <!-- Filtros -->
     <div class="bg-[#1D2C4B] max-w-[333px] max-h-[65px] text-center rounded-lg text-white">
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
 
     <!--###################   FILTRO PRECIO ####################################-->
     <div class="border-b border-gray-200 py-6">
+      <!-- Precios -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
@@ -88,85 +115,77 @@
         <p>No se han encontrado resultados</p>
         <p>No hemos encontrado lo que busca pero si lo desea pude ponerse en contacto con nosotros y solicitarlo, o quizá prefiera volver a intentarlo realizando una búsqueda avanzada que se ajuste mejor a sus criterios.</p>
       </div>
-
-
-      <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-        <div *ngIf="!noResults" class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-          <div *ngFor="let libro of filteredBooks" href="#" class="group">
-            <img [src]="libro.imagen" [alt]="libro.titulo"  class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
-            <h3 class="mt-4 text-lg font-bold text-gray-800 text-center">{{ libro.titulo }}</h3>
-            <p class="text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
-            <p class="mt-2 text-xl font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
-            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368">-->
-              <path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/>-->
-            </svg>
-            <button (click)="verDetallesLibro(libro.id)" class="px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg">Ver detalles</button>
-          </div>
-
-        </div>
-      </div>
     </div>
 
 
+    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+      <div *ngIf="!noResults" class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+        <div *ngFor="let libro of filteredBooks" href="#" class="group">
+          <img [src]="libro.imagen" [alt]="libro.titulo"  class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
+          <h3 class="mt-4 text-lg font-bold text-gray-800 text-center">{{ libro.titulo }}</h3>
+          <p class="text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
+          <p class="mt-2 text-xl font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
+          <div>
+          <button (click)="addToCart(libro)" class="px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368">
+            <path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/>-->
+          </svg>
+            Añadir al carrito
+          </button>
+          </div>
+
+          <button (click)="verDetallesLibro(libro.id)" class="px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg">Ver detalles</button>
+        </div>
+
+      </div>
+    </div>
   </div>
 
+
 </div>
+
+
+
 
 <div class="flex items-center justify-center border-t border-gray-200 bg-customTeal px-4 py-3 sm:px-6">
 
   <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
 
-    <button (click)="cambiarPagina(currentPage - 1)" [disabled]="currentPage === 1"
-            class="px-4 py-2 mx-1 bg-gray-300 rounded hover:bg-gray-400">
+<!--     Previous Button (Only visible on page 2 or greater)-->
+    <button *ngIf="currentPage > 1"
+       (click)="cargarLibros(currentPage - 1)" [disabled]="currentPage === 1"
+       class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       Anterior
+      <span class="sr-only"></span>
+      <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
+      </svg>
     </button>
-
-    <span class="px-4 py-2 mx-1 bg-blue-900 text-white rounded">
-    Página {{ currentPage }} de {{ totalPages }}
-  </span>
-
-    <button (click)="cambiarPagina(currentPage + 1)" [disabled]="currentPage === totalPages"
-            class="px-4 py-2 mx-1 bg-gray-300 rounded hover:bg-gray-400">
+    <button (click)="cargarLibros(currentPage + 1)" [disabled]="currentPage >= totalPages"
+       class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
+      <span class="sr-only"></span>
       Siguiente
+      <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+      </svg>
     </button>
   </nav>
 </div>
 
-<div class="flex-grow grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-3 bg-gray-800">
-  <div *ngIf="!libros || libros.length === 0" class="loading text-white text-center">
-    <div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 z-50">
-      <h1 class="text-xl md:text-7xl font-bold flex items-center">Cargand
-      </h1>
-      <div class="animate-spin rounded-full h-16 w-16 border-t-2 border-b-2 border-gray-100"></div>
-    </div>
-  </div>
-</div>
-
-<!--<div class="max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-lg">-->
-<!--  <h2 class="text-2xl font-bold mb-4">🛒 Mi Carrito</h2>-->
-
-<!--  &lt;!&ndash; Items List &ndash;&gt;-->
-<!--  <div *ngIf="cartItems.length > 0; else emptyCart">-->
-<!--    <div *ngFor="let item of cartItems" class="flex items-center justify-between border-b pb-4 mb-4">-->
-<!--      <div class="flex items-center space-x-4">-->
-<!--        <img [src]="item.image" [alt]="item.name" class="w-16 h-16 rounded-lg object-cover">-->
-<!--        <div>-->
-<!--          <h3 class="text-lg font-semibold">{{ item.name }}</h3>-->
-<!--          <p class="text-gray-600">{{ item.price | currency: 'EUR' }}</p>-->
-<!--        </div>-->
-<!--      </div>-->
-
-      <!-- Quantity Controls -->
-<!--      <div class="flex items-center space-x-3">-->
-<!--        <button (click)="decreaseQuantity(item)" class="px-3 py-1 bg-gray-300 rounded-lg">-</button>-->
-<!--        <span class="text-lg font-semibold">{{ item.quantity }}</span>-->
-<!--        <button (click)="increaseQuantity(item)" class="px-3 py-1 bg-blue-600 text-white rounded-lg">+</button>-->
-<!--      </div>-->
+<!--<div class="flex-grow grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-3 bg-gray-800">-->
+<!--  <div *ngIf="!libros || libros.length === 0" class="loading text-white text-center">-->
+<!--    <div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 z-50">-->
+<!--      <h1 class="text-xl md:text-7xl font-bold flex items-center">Cargand-->
+<!--      </h1>-->
+<!--      <div class="animate-spin rounded-full h-16 w-16 border-t-2 border-b-2 border-gray-100"></div>-->
 <!--    </div>-->
 <!--  </div>-->
-
-  <!-- Empty Cart Message -->
-<!--  <ng-template #emptyCart>-->
-<!--    <p class="text-gray-500 text-center">Tu carrito está vacío 🛍️</p>-->
-<!--  </ng-template>-->
 <!--</div>-->
+
+<div *ngIf="!libros || libros.length === 0" class="text-black text-center">
+  No hay libros disponibles
+</div>
+
+
+
+
