Mejoras en el carrusel.

--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -14,7 +14,12 @@
     </button>
 
     <!-- Carrusel -->
-    <div #carousel class="carousel-container flex overflow-hidden space-x-6 mt-6 transition-all duration-300">
+    <div
+      #carousel
+      class="carousel-container flex overflow-hidden space-x-6 mt-6 transition-all duration-300"
+      (mouseenter)="onMouseEnter()"
+      (mouseleave)="onMouseLeave()"
+    >
       <div *ngFor="let libro of books" class="carousel-item hover:scale-110 min-w-[200px] w-[200px] h-[300px] flex-shrink-0 relative group">
         <img [src]="libro.imagen" alt="Portada del libro {{ libro.titulo }}" class="w-full h-full object-cover rounded-lg shadow-md">
 
